css/style.css
:root {
    --obstacle-move-duration: 3s;
    --obstacle-move-delay: 0s;
    --jump-duration: 1s;
    --animate-player-duration: 0.3s;
    --canvas-width: 800px;
    --canvas-height: 300px;
    --player-width: 90px;
    --player-height: 60px;
    --obstacle-width: 20px;
    --obstacle-height: 50px;
    --jump-height: 150px;
    --obstacle-move-distance: calc((var(--canvas-width) - var(--obstacle-width))*-1);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
    margin: auto;
}

.canvas {
    width: var(--canvas-width);
    height: var(--canvas-height);
    border: 1px solid black;
    display: flex;
    flex-direction: column-reverse;
}

.moving_objects {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: end;
}

.ground {
    width: 100%;
    height: 50px;
    background-image: url(../images/dino_ground.png);
    background-size: 50px 50px;
}

.player {
    width: var(--player-width);
    height: var(--player-height);
    background-image: url(../images/dino1.png);
    background-size: cover;
    transform-origin: bottom;
}

.obstacle {
    width: var(--obstacle-width);
    height: var(--obstacle-height);
    background-color: red;
    transform-origin: left;
}

.pause {
    animation-play-state: paused;
}

.jump {
    animation-name: player_jump;
    animation-duration: var(--jump-duration);
    animation-timing-function: linear;
}

.move {
    animation-name: obstacle_move;
    animation-duration: var(--obstacle-move-duration);
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-delay: var(--obstacle-move-delay);
}

.animate_player {
    animation-name: animate_player;
    animation-duration: var(--animate-player-duration);
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@keyframes animate_player {
    0% {
        background-image: url('../Images/dino1.png');
    }

    20% {
        background-image: url('../Images/dino2.png');
    }

    40% {
        background-image: url('../Images/dino3.png');
    }

    60% {
        background-image: url('../Images/dino4.png');
    }

    80% {
        background-image: url('../Images/dino5.png');
    }

    100% {
        background-image: url('../Images/dino1.png');
    }
}

.dead {
    background-image: url(../images/dino6.png) !important;
}

@keyframes obstacle_move {
    from {
        transform: translateX(0px);
    }

    to {
        transform: translateX(var(--obstacle-move-distance));
    }
}

@keyframes player_jump {
    0% {
        transform: translateY(0px);
    }

    50% {
        transform: translateY(calc(var(--jump-height) * -1));
    }

    100% {
        transform: translateY(0px);
    }
}

